--- a/templates/evabeach_details.html
+++ b/templates/evabeach_details.html
@@ -86,29 +86,85 @@
                         </div>
                     </div>
                     <div class="hotel-name">
-                        <h2>Executive Villa King Room with Balcony</h2>
-                        <!-- <div class="button-element">
-                            <button class="view-other-rooms">View Other Rooms</button>
-                            <button class="book-now">Book This Now</button>
-                        </div> -->
-                        
-                        <p>For 2 Adults</p>
-                        <p>Room with Breakfast</p>
-                        <!-- <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p>+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p>
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                        <h2>About</h2>
                     </div>
-                    <!-- <div class="book">
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button>
+                    <p class="tax-price">
+                        Located in Varkala Cliff, within 100 meters of Varkala Beach and 600 meters of Odayam Beach, Eva Beach Hotel provides accommodation with a terrace, <br> free wifi throughout the property, and free private parking for guests who drive. Rooms are complete with a private bathroom, while certain rooms at the resort <br> also offer a seating area.Popular points of interest near Eva Beach Hotel include Aaliyirakkm Beach, Varkala Cliff, and Janardhanaswamy Temple. <br> The nearest airport is Thiruvananthapuram International, 41 km from the accommodation, and the property offers a paid airport shuttle service
+                    </p> <br>
+
+                    <span>Room Types</span><br>
+                        <div class="list_div">
+                            <li>Standard NON AC  --  Room Only</li>
+                            <li>Deluxe AC  --  Room Only</li>
+                            <li>NON AC Family Room  --  Room Only</li>
+                            <li>AC Family Room  --  Room Only</li>
+                        </div><br><br>
+
+                    <!-- <span>Property Rules</span><br> -->
+                    <div class="list_div">
+                        <h3>Property Rules</h3>
+                        <p>Check-in: 12 PM Check-out: 11 AM</p>
+                        <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
+                        <li>Outside food is not allowed </li>
+                        <li>Pets are not allowed.</li>
+
+                    </div><br><br>
+
+                    <h1 class="Location">Hotel-images</h1>
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_beach_1.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty-dtls.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>        
+    
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_room2.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_room1.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                        <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p class="tax-price">+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p> -->
-                        <!-- <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+   
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.515618617471!2d76.69889197026163!3d8.737458774310467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ef000dd7a3cb%3A0x73c76f1ebd562353!2sEVA%20BEACH%20HOTEL!5e0!3m2!1sen!2sin!4v1717517987118!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
