--- a/templates/haiwa_details.html
+++ b/templates/haiwa_details.html
@@ -87,29 +87,82 @@
                         </div>
                     </div>
                     <div class="hotel-name">
-                        <h2>Executive Villa King Room with Balcony</h2>
-                        <!-- <div class="button-element">
-                            <button class="view-other-rooms">View Other Rooms</button>
-                            <button class="book-now">Book This Now</button>
-                        </div> -->
-                        
-                        <!-- <p>For 2 Adults</p>
-                        <p>Room with Breakfast</p> -->
-                        <!-- <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p>+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p>
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                        <h2>About</h2>
                     </div>
-                    <!-- <div class="book">
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button>
+
+                    <p class="tax-price">
+                        A 5-minute walk from the Beach. The Haiwa By Hudels is an ideal tourist destination to stay in as it is located at a very convenient distance from the railway station and the airport. <br> . All the 10 rooms in the hotel provide a relaxing time for the guests. The rooms are designed with colorful interiors and fine furnishings. The tiled floors add grace to the rooms. <br> The rooms are installed with all the requirements that a person looks for. The rooms are divided into Deluxe A/C and Standard Non A/C. All the rooms have an attached bathrooms.
+                    </p> <br>
+                    
+                    <span>Room Types</span><br>
+                    <div class="list_div">
+                        <li>Standard Non AC room --  Room Only </li>
+                        <li>Deluxe AC Room  --  Room Only</li>
+                    </div><br><br>
+
+                    <!-- <span>Property Rules</span><br> -->
+                    <div class="list_div">
+                        <h3>Property Rules</h3>
+                        <p>Check-in: 12 PM - 7:30 PM  Check-out: 11 AM</p>
+                        <li>Guests below 18 years of age are not allowed at the property.</li>
+                        <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
+                        <li>Pets are not allowed.</li>
+                    </div><br><br>
+
+                    <h1 class="Location">Hotel-images</h1>
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_beach_1.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty-dtls.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>        
+    
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_room2.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_room1.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                        <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p class="tax-price">+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p> -->
-                        <!-- <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3943.5011516462932!2d76.7021423!3d8.7388263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ef1c67bafa2b%3A0x76d0cb27ecb2e89a!2sThe%20Haiwa%20Beach%20Residency!5e0!3m2!1sen!2sin!4v1717566511971!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
